--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>authorization-example</artifactId>
+    <artifactId>authorization-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>authorization-example</name>
-    <description>authorization-example</description>
+    <name>authorization-server</name>
+    <description>authorization-server</description>
     <properties>
         <java.version>17</java.version>
     </properties>
