--- a/vue-login-page-example/package.json
+++ b/vue-login-page-example/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
