--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/authorization-example?serverTimezone=UTC&userUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://zeabur-gcp-asia-east1-1.clusters.zeabur.com:30158/authorization-example?serverTimezone=UTC&userUnicode=true&characterEncoding=utf-8
     username: root
-    password: root
+    password: x86Zo4Tz71e2
   security:
     oauth2:
       client:
@@ -71,11 +71,17 @@ spring:
             authorization-uri: https://gitee.com/oauth/authorize
           github:
             user-name-attribute: login
-  jackson:
-    default-property-inclusion: non_null
+  data:
+    redis:
+      host: zeabur-gcp-asia-east1-1.clusters.zeabur.com
+      port: 32716
+      password: 5P30kUy761LY
 
 # Mybatis-Plus 配置
 mybatis-plus:
   # 扫描mapper文件
   mapper-locations:
     - classpath:com/vains/mapper/xml/*Mapper.xml
+
+server:
+  port: 5000
