--- a/authorization-server/Dockerfile
+++ b/authorization-server/Dockerfile
@@ -5,8 +5,8 @@ RUN mvn clean package -DskipTests
 
 FROM eclipse-temurin:17-jre as builder
 WORKDIR application
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} application.jar
+ARG JAR_FILE=/app/target/*.jar
+COPY --from=build ${JAR_FILE} application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
 FROM eclipse-temurin:17-jre
@@ -16,3 +16,4 @@ COPY --from=builder application/spring-boot-loader/ ./
 COPY --from=builder application/snapshot-dependencies/ ./
 COPY --from=builder application/application/ ./
 ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
+EXPOSE 5000
