--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -15,6 +15,8 @@
     <description>authorization-server</description>
     <properties>
         <java.version>17</java.version>
+        <!-- 修复漏洞 -->
+        <snakeyaml.version>2.0</snakeyaml.version>
     </properties>
     <dependencies>
         <dependency>
