--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -15,10 +15,23 @@
     <description>authorization-server</description>
     <properties>
         <java.version>17</java.version>
+        <!-- hutool工具包 -->
+        <hutool.version>5.8.18</hutool.version>
+        <!-- velocity模板引擎 -->
+        <velocity.version>2.3</velocity.version>
         <!-- 修复漏洞 -->
         <snakeyaml.version>2.0</snakeyaml.version>
+        <!-- Mybatis Plus版本号 -->
+        <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
+        <!-- Mybatis Plus版本号 -->
+        <webjars.bootstrap.version>5.2.3</webjars.bootstrap.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
@@ -63,18 +76,18 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.5.3.1</version>
+            <version>${mybatis-plus.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
-            <version>3.5.3.1</version>
+            <version>${mybatis-plus.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-engine-core</artifactId>
-            <version>2.3</version>
+            <version>${velocity.version}</version>
         </dependency>
 
         <dependency>
@@ -84,13 +97,13 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>5.2.3</version>
+            <version>${webjars.bootstrap.version}</version>
         </dependency>
 
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-captcha</artifactId>
-            <version>5.8.18</version>
+            <version>${hutool.version}</version>
         </dependency>
 
         <dependency>
