前端项目添加PKCE授权申请流程

--- a/vue-login-page-example/.env.dev
+++ b/vue-login-page-example/.env.dev
@@ -1,2 +1,4 @@
 NODE_ENV=development
-VITE_OAUTH_ISSUER=http://192.168.119.1:8080
+VITE_OAUTH_ISSUER=http://127.0.0.1:8080
+VITE_OAUTH_CLIENT_ID=pkce-message-client
+VITE_OAUTH_REDIRECT_URI=http://127.0.0.1:5173/oauth2Redirect
