--- a/vue-login-page-example/package.json
+++ b/vue-login-page-example/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.1.2",
     "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
