添加授权码授权申请流程，添加prod环境配置文件、打包命令

--- a/vue-login-page-example/.env.dev
+++ b/vue-login-page-example/.env.dev
@@ -1,4 +1,8 @@
 NODE_ENV=development
+BASE_URL=
 VITE_OAUTH_ISSUER=http://127.0.0.1:8080
-VITE_OAUTH_CLIENT_ID=pkce-message-client
-VITE_OAUTH_REDIRECT_URI=http://127.0.0.1:5173/oauth2Redirect
+VITE_OAUTH_CLIENT_ID=messaging-client
+VITE_PKCE_CLIENT_ID=pkce-message-client
+VITE_OAUTH_CLIENT_SECRET=123456
+VITE_PKCE_REDIRECT_URI=http://127.0.0.1:5173/PkceRedirect
+VITE_OAUTH_REDIRECT_URI=http://127.0.0.1:5173/OAuth2Redirect
