--- a/vue-login-page-example/package.json
+++ b/vue-login-page-example/package.json
@@ -7,7 +7,8 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
-    "build-only-dev": "vite build --mode dev",
+    "build-only:dev": "vite build --mode dev",
+    "build-only:prod": "vite build --mode prod",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
