--- a/.github/workflows/PackageImageToAcr.yml
+++ b/.github/workflows/PackageImageToAcr.yml
@@ -10,7 +10,6 @@ env:
   IMAGE_NAME: vains/authorization-example
   IMAGE_TAG: latest
  
- 
 jobs:
   build:
  
@@ -29,13 +28,14 @@ jobs:
  
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
-      # - name: login to ${{ env.REGISTRY }}
-      #   if: github.event_name != 'pull_request'
-      #   uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c # 用于登录docker以便我们后续上传镜像到自己的镜像仓库
-      #   with:
-      #     registry: ${{ env.REGISTRY }}
-      #     username: ${{ secrets.USERMAME }} # 镜像仓库用户名
-      #     password: ${{ secrets.PASSWORD }} # 镜像仓库密码
+      # 用于登录docker以便我们后续上传镜像到自己的镜像仓库
+      - name: login to ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.USERMAME }} # 镜像仓库用户名
+          password: ${{ secrets.PASSWORD }} # 镜像仓库密码
  
       # 生成和推送镜像  阿里云镜像仓库推送有问题
       # # https://github.com/docker/build-push-action
