--- a/vue-login-page-example/.env.prod
+++ b/vue-login-page-example/.env.prod
@@ -1,6 +1,6 @@
 NODE_ENV=product
 BASE_URL=
-VITE_OAUTH_ISSUER=https://oauth-hwrjm8vk.b4a.run
+VITE_OAUTH_ISSUER=https://oauth1-m38kr34s.b4a.run
 VITE_OAUTH_CLIENT_ID=messaging-client
 VITE_PKCE_CLIENT_ID=pkce-message-client
 VITE_OAUTH_CLIENT_SECRET=123456
