添加 spring session data redis依赖，根据redis实现不同二级域名的session共享，去除nonceId相关配置

--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -73,6 +73,12 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
+        <!-- 引入分布式session -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
