--- a/vue-login-page-example/.env.prod
+++ b/vue-login-page-example/.env.prod
@@ -1,8 +1,8 @@
 NODE_ENV=product
 BASE_URL=
-VITE_OAUTH_ISSUER=https://oauth1-m38kr34s.b4a.run
+VITE_OAUTH_ISSUER=http://kwqqr48rgo.cdhttp.cn
 VITE_OAUTH_CLIENT_ID=messaging-client
 VITE_PKCE_CLIENT_ID=pkce-message-client
 VITE_OAUTH_CLIENT_SECRET=123456
-VITE_PKCE_REDIRECT_URI=https://vains-sofia.gitee.io/PkceRedirect
-VITE_OAUTH_REDIRECT_URI=https://vains-sofia.gitee.io/OAuth2Redirect
+VITE_PKCE_REDIRECT_URI=http://k7fsqkhtbx.cdhttp.cn/PkceRedirect
+VITE_OAUTH_REDIRECT_URI=http://k7fsqkhtbx.cdhttp.cn/OAuth2Redirect
