Spring Cloud示例添加SpringBoot Admin Server服务监控，更新nacos配置文件

--- a/gateway-example/normal-resource-example/src/main/resources/application.yml
+++ b/gateway-example/normal-resource-example/src/main/resources/application.yml
@@ -7,3 +7,14 @@ spring:
       - nacos:resource.yml?refresh=true
   application:
     name: resource
+
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    enabled-by-default: true
+    web:
+      base-path: /actuator
+      exposure:
+        include: "*"
