修复提升SpringBoot版本后通过Dockerfile打包镜像后JarLauncher路径不正确问题，Dockerfile中打包jar时指定settings.xml文件，使用阿里云镜像

--- a/authorization-server/Dockerfile
+++ b/authorization-server/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3.8.3-openjdk-17-slim AS build
 WORKDIR /app
 COPY . .
-RUN mvn clean package -DskipTests
+RUN mvn clean package -s settings.xml -DskipTests
 
 FROM eclipse-temurin:17-jre as builder
 WORKDIR application
@@ -15,5 +15,5 @@ COPY --from=builder application/dependencies/ ./
 COPY --from=builder application/spring-boot-loader/ ./
 COPY --from=builder application/snapshot-dependencies/ ./
 COPY --from=builder application/application/ ./
-ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java", "org.springframework.boot.loader.launch.JarLauncher"]
 EXPOSE 5000
