优化Dockerfile内的打包命令

--- a/authorization-server/Dockerfile
+++ b/authorization-server/Dockerfile
@@ -1,7 +1,9 @@
 FROM maven:3.8.3-openjdk-17-slim AS build
 WORKDIR /app
 COPY . .
-RUN mvn clean package -s settings.xml -DskipTests
+RUN mvn clean package -DskipTests
+# 如果使用国内网络环境打包可以使用下边的命令，正在使用的是Github Action打包时使用的，国外环境无影响
+# RUN mvn clean package -s settings.xml -DskipTests
 
 FROM eclipse-temurin:17-jre as builder
 WORKDIR application
