--- a/.github/workflows/NativeImageToACR.yml
+++ b/.github/workflows/NativeImageToACR.yml
@@ -1,5 +1,5 @@
 # 工作流名称
-name: Package Docker Image and push to alibaba ACR
+name: Package Native Docker Image and push to alibaba ACR
 
 on:
   # master分支PR时
@@ -8,7 +8,7 @@ on:
       - master
   # 手动触发任务
   workflow_dispatch:
- 
+
 env:
   # 仓库地址
   REGISTRY: registry.cn-guangzhou.aliyuncs.com
@@ -16,10 +16,10 @@ env:
   IMAGE_TAG: latest
   USERNAME: ${{ secrets.USERNAME }}
   PASSWORD: ${{ secrets.PASSWORD }}
- 
+
 jobs:
   build:
- 
+
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -27,12 +27,12 @@ jobs:
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
- 
+
     steps:
       # 将远程仓库中的源代码领取到workfile自动化构建脚本运行的服务器
       - name: Checkout repository
-        uses: actions/checkout@v3 
- 
+        uses: actions/checkout@v3
+
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       # 用于登录docker以便我们后续上传镜像到自己的镜像仓库
@@ -43,7 +43,7 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ env.USERNAME }}
           password: ${{ env.PASSWORD }}
- 
+
       # 生成和推送镜像  阿里云镜像仓库推送有问题
       # # https://github.com/docker/build-push-action
       # - name: Build and push Docker image
@@ -57,7 +57,7 @@ jobs:
       #     tags: ${{env.IMAGE_NAME}}:${{env.IMAGE_TAG}}.${{ github.run_id }}.${{ github.run_number }} #动态变量镜像TAG 使用github运行job和jobid设置tag
       #     context: . # 相对以远程仓库根路径的dockerfile的路径
       #     file: ./NetByDocker/Dockerfile # 指定Dockerfile
- 
+
       - name: Show version
         run:
           docker version
@@ -70,13 +70,13 @@ jobs:
       # 使用Dockerfile构建镜像  ${{env.IMAGE_TAG}}.${{ github.run_id }}.${{ github.run_number }}
       - name: Build the Docker image
         run:
-          cd authorization-server && docker build . --file Dockerfile --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{env.IMAGE_TAG}} --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:0.1.${{ github.run_number }}
+          cd authorization-server && mvn -DskipTests -Pnative spring-boot:build-image --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{env.IMAGE_TAG}} --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:0.1.${{ github.run_number }}
 
       # 推送镜像到镜像仓库
       - name: Push to ACR
         run:
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{env.IMAGE_TAG}} && docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:0.1.${{ github.run_number }}
- 
-      # 列出所有镜像    
-      - name: Docker Images Lst 
+
+      # 列出所有镜像
+      - name: Docker Images Lst
         run: docker images
