--- a/.github/workflows/NativeImageToACR.yml
+++ b/.github/workflows/NativeImageToACR.yml
@@ -32,7 +32,7 @@ jobs:
     steps:
       # 将远程仓库中的源代码领取到workfile自动化构建脚本运行的服务器
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
@@ -58,10 +58,16 @@ jobs:
       #     tags: ${{env.IMAGE_NAME}}:${{env.IMAGE_TAG}}.${{ github.run_id }}.${{ github.run_number }} #动态变量镜像TAG 使用github运行job和jobid设置tag
       #     context: . # 相对以远程仓库根路径的dockerfile的路径
       #     file: ./NetByDocker/Dockerfile # 指定Dockerfile
+      - name: Set Jdk21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '21'
+          cache: 'maven'
 
       - name: Show version
         run:
-          docker version
+          java -version
 
       # 登录阿里云镜像仓库
       - name: Login Alibaba ACR
