--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -14,7 +14,7 @@
     <name>authorization-server</name>
     <description>authorization-server</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <!-- hutool工具包 -->
         <hutool.version>5.8.25</hutool.version>
         <!-- velocity模板引擎 -->
@@ -169,15 +169,15 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
-            <!--<plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
-            </plugin>-->
+            </plugin>
         </plugins>
     </build>
 
