--- a/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
+++ b/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
@@ -77,6 +77,12 @@
     },
     {
       "name":"java.util.Collections$SingletonList"
+    },
+    {
+      "name":"java.util.ImmutableCollections$SetN"
+    },
+    {
+      "name":"java.util.ImmutableCollections$Set12"
     }
   ],
   "lambdaCapturingTypes":[
