--- a/authorization-server/pom.xml
+++ b/authorization-server/pom.xml
@@ -148,6 +148,9 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <docker>
+                        <host>tcp://192.168.190.129:2375</host>
+                    </docker>
                 </configuration>
             </plugin>
             <plugin>
