联合身份认证添加GraalVM Native Image打包适配，修复本机镜像下三方登录抛出异常问题

--- a/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
+++ b/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
@@ -122,6 +122,9 @@
     },
     {
       "name":"org.springframework.security.oauth2.core.AuthorizationGrantType"
+    },
+    {
+      "name":"org.springframework.security.oauth2.core.OAuth2AuthorizationException"
     }
   ],
   "lambdaCapturingTypes":[
