修复本机镜像下三方登录抛出异常问题

--- a/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
+++ b/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
@@ -125,6 +125,9 @@
     },
     {
       "name":"org.springframework.security.oauth2.core.OAuth2AuthorizationException"
+    },
+    {
+      "name":"org.springframework.core.NestedRuntimeException"
     }
   ],
   "lambdaCapturingTypes":[
