修复本机镜像下三方登录抛出异常问题

--- a/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
+++ b/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
@@ -131,6 +131,9 @@
     },
     {
       "name":"org.springframework.dao.DataAccessException"
+    },
+    {
+      "name":"org.springframework.dao.NonTransientDataAccessException"
     }
   ],
   "lambdaCapturingTypes":[
