修复本机镜像下三方登录抛出异常问题

--- a/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
+++ b/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
@@ -137,6 +137,9 @@
     },
     {
       "name":"org.springframework.dao.DataIntegrityViolationException"
+    },
+    {
+      "name":"org.springframework.web.client.RestClientException"
     }
   ],
   "lambdaCapturingTypes":[
