修复本机镜像下三方登录抛出异常问题

--- a/authorization-server/src/main/resources/META-INF/native-image/proxy-config.json
+++ b/authorization-server/src/main/resources/META-INF/native-image/proxy-config.json
@@ -26,5 +26,8 @@
       "org.springframework.core.SerializableTypeWrapper$SerializableTypeProxy",
       "java.io.Serializable"
     ]
+  },
+  {
+    "interfaces":["org.springframework.data.redis.core.RedisHash"]
   }
 ]
