--- a/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
+++ b/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
@@ -140,6 +140,9 @@
     },
     {
       "name":"org.springframework.web.client.RestClientException"
+    },
+    {
+      "name":"org.springframework.web.client.ResourceAccessException"
     }
   ],
   "lambdaCapturingTypes":[
