修复本机镜像下三方登录抛出异常问题

--- a/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
+++ b/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
@@ -143,6 +143,15 @@
     },
     {
       "name":"org.springframework.web.client.ResourceAccessException"
+    },
+    {
+      "name":"java.io.IOException"
+    },
+    {
+      "name":"java.lang.Exception"
+    },
+    {
+      "name":"java.lang.Throwable"
     }
   ],
   "lambdaCapturingTypes":[
