--- a/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
+++ b/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
@@ -152,6 +152,9 @@
     },
     {
       "name":"java.lang.Throwable"
+    },
+    {
+      "name":"java.sql.SQLException"
     }
   ],
   "lambdaCapturingTypes":[
