修复本机镜像下三方登录抛出异常问题

--- a/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
+++ b/authorization-server/src/main/resources/META-INF/native-image/serialization-config.json
@@ -155,6 +155,15 @@
     },
     {
       "name":"java.sql.SQLException"
+    },
+    {
+      "name":"java.sql.SQLWarning"
+    },
+    {
+      "name":"java.sql.DataTruncation"
+    },
+    {
+      "name":"com.mysql.cj.jdbc.exceptions.MysqlDataTruncation"
     }
   ],
   "lambdaCapturingTypes":[
