--- a/.github/workflows/PushToAcr.yml
+++ b/.github/workflows/PushToAcr.yml
@@ -85,7 +85,7 @@ jobs:
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{env.IMAGE_TAG}} && docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:0.1.${{ github.run_number }}
 
       - name: Refresh docker process
-        run: curl -u basic:${{ secrets.BASIC_PASSWORD }} http://k7fsqkhtbx.cdhttp.cn/shell-executor/docker/refreshProcess
+        run: curl -u basic:${{ secrets.BASIC_PASSWORD }} https://flow-cloud.love/shell-executor/docker/refreshProcess
 
       # 列出所有镜像    
       - name: Docker Images Lst 
